--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "got": "^11.0.2",
+    "replace-in-file": "^6.3.2",
     "website-scraper": "^4.2.3",
     "website-scraper-puppeteer": "^0.1.5"
   },
