--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "axios": "^0.27.2",
     "dotenv": "^16.0.0",
+    "express": "^4.18.0",
     "got": "^11.0.2",
     "replace-in-file": "^6.3.2",
     "website-scraper": "^4.2.3",
