--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "got": "^11.0.2",
+    "jsdom": "^19.0.0",
     "replace-in-file": "^6.3.2",
     "website-scraper": "^4.2.3",
     "website-scraper-puppeteer": "^0.1.5"
