--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "angular",
+  "dependencies": {
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.0",
+    "got": "^11.0.2",
+    "jsdom": "^19.0.0",
+    "replace-in-file": "^6.3.2",
+    "website-scraper": "^4.2.3",
+    "website-scraper-puppeteer": "^0.1.5"
+  },
+  "name": "projeto",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "microServiço1.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "3": "^2.1.0",
-    "-": "^0.0.1",
-    "bootstrap": "^4.1.3",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.3",
-    "save": "^2.5.0"
-  }
+  "description": ""
 }
